fix alignment

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -70,18 +70,18 @@ body {
   }
   #hourRotator {
     top: 73px;
-    left: 434px;
+    left: 374px;
     position: absolute;
   }
   #minuteRotator {
     top: 73px;
-    left: 434px;
+    left: 374px;
     position: absolute;
     .rotation(66deg);
   }
   #clockCenter {
     top: 90px;
-    left: 433px;
+    left: 373px;
     position: absolute;
     height: 8px;
     width: 8px;
